<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.shegor.gitrepos.ui.gitReposList.GitReposListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repositories_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.gitReposList.GitReposListFragment">

        <TextView
            android:id="@+id/git_repos_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/git_repos_list_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/git_repos_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/git_repos_list_header"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/git_repos_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/git_repos_list_header" />

        <TextView
            android:id="@+id/connectionProblemsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_connection_problems"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/retryButton"
            app:layout_constraintEnd_toEndOf="@+id/git_repos_recycler_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/git_repos_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/git_repos_list_header"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/retryButton"
            style="@style/black_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/connectionProblemsTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/connectionProblemsTextView"
            app:layout_constraintTop_toBottomOf="@+id/connectionProblemsTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>