<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.gitRepoDetails.GitRepoDetailsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.shegor.gitrepos.ui.gitRepoDetails.GitRepoDetailsViewModel" />

        <variable
            name="commit"
            type="com.shegor.gitrepos.domain.Commit" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/includedGitRepo"
                layout="@layout/git_repo_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lastCommitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/last_commit"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/includedGitRepo" />

            <TextView
                android:id="@+id/lastCommitMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@{commit.message}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastCommitTitle"
                tools:text="Added graph plotings for time series\nAdded timouts of rationale/ZIP observing\nSome effort to minimise memory usage" />

            <TextView
                android:id="@+id/commitDate"
                commitDate="@{commit.date}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastCommitMessage"
                tools:text="Date: 01.06.2020" />

            <TextView
                android:id="@+id/commitAuthor"
                commitAuthor="@{commit.authorName}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/commitDate"
                app:layout_constraintEnd_toStartOf="@+id/commitDate"
                app:layout_constraintTop_toTopOf="@+id/commitDate"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Author: Rimon Kavy" />

            <TextView
                android:id="@+id/allParentShaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/all_parents_sha"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                tools:layout_editor_absoluteX="140dp" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="commitAuthor, commitDate"
                tools:layout_editor_absoluteY="168dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/parentsShaRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allParentShaTitle" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/black"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/allParentShaTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastCommitTitle" />

            <TextView
                android:id="@+id/connectionProblemsMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_connection_problems"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/retryButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastCommitTitle"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/retryButton"
                style="@style/black_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.getLastCommit()}"
                android:text="@string/retry"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectionProblemsMessage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>